Fixed spacing for phones on page 2

--- a/src/css/Page2.css
+++ b/src/css/Page2.css
@@ -76,6 +76,7 @@
 @media screen and (orientation : portrait) {
     .page2-content {
         font-size: 1.5rem;
+        line-height: 3vh;
     }
 
     .page2-x {
